# powerbi-request-automation

./: .dockerignore  .gitignore  .mcp.json  ARCHITECTURE.md  E2E_TEST_RESULTS.md  IMPLEMENTATION_STATUS.md  INTEGRATION_TESTING.md  PLAN.md  README.md  SELF_HEALING.md  TEST_EXAMPLES.md  docker-compose.yml  package-lock.json  package.json  test-composite-tools.js  test-enhanced-mcp.js
.github/workflows/: claude.yml  pr-tests.yml  setup-aas-admin.yml  tmdl-tests.yml
aas-validator/AasValidator/: AasValidator.csproj  Program.cs
backend/: .env.example  Dockerfile  package-lock.json  package.json
backend/src/: index.ts
frontend/: .dockerignore  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  types.ts
mcp-servers/powerbi-automation/: Dockerfile  README.md  pyproject.toml
mcp-servers/powerbi-automation/src/powerbi_automation_mcp/: __init__.py  automation.py  server.py
mcp-servers/powerbi-report/: DESIGN_PRINCIPLES.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  VISUAL_EXAMPLES.md  VISUAL_STYLING_GUIDE.md  package-lock.json  package.json
mcp-servers/powerbi-semantic/: Dockerfile  README.md  (+3 more)
models/: clients.json
ontology-investigation/: PROJECT_SUMMARY.md  README.md  docker-compose.yml
sample-data/: Sales-Returns-Sample.pbip
scripts/: add-tmdl-measure.ps1  delete-database.ps1  deploy-tmdl-model.js  deploy-tmsl.ps1  deploy-via-powershell.ps1  extract-measures.js  full-validation-workflow.md  validate-tmdl.js
tests/: e2e-business-request.json  e2e-test-request.json
tmsl-executor/: Program.cs  TmslExecutor.csproj
(+455 files in other folders)
