[project]
name = "powerbi-automation-mcp"
version = "1.0.0"
description = "MCP server for Windows automation of Power BI Desktop"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.2",
    "pywinauto>=0.6.8",
    "psutil>=6.1.1",
    "Pillow>=11.0.0",
    "pywin32>=308; sys_platform == 'win32'"
]

[project.scripts]
powerbi-automation-mcp = "powerbi_automation_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/powerbi_automation_mcp"]
